# storage

./: .gitignore  LICENSE  README.md  requirements_dev.txt  setup.cfg
config/: component_type.txt  console_messages.json
data/: items.json
dev/: clear_arg_run.sh  create_arg_run.sh  create_tests.py  delete_arg_run.sh  pre-commit  update_arg_run.sh
src/storage/: __main__.py  component.py  const.py  container.py  data_manager.py  drawer.py  exceptions.py  nochange.py  search.py  search_query.py  session.py  sorter.py  storage.py  util.py  validator.py
src/storage/cli/: argexecutor.py  console_message.py  exceptions.py  parser.py  printer.py  subparser.py
src/storage/items/: component.py  container.py  drawer.py  position.py  row.py
tests/: conftest.py  test_data_manager.py  test_session.py
tests/cli/: test_parser.py
tests/test_cli/: clear_args.txt  conftest.py  create_args.txt  delete_args.txt  get_args.txt  test_argexecutor.py  test_create_argexecutor.py  test_parser.py  update_args.txt
tests/test_items/: conftest.py  test_container.py  test_drawer.py  test_searcher.py  test_sorter.py
