[metadata]
name = Storage
description = Easily manage, track, update and search for your component storage system.
author = FancySnacks
version = 0.1.0
license = MIT
license_file = LICENSE
readme = README
platforms = unix, linux, osx, cygiwn, win32
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    storage
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    storage = storage.__main__:main

[build-system]
requires = ["setuptools~=69.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.extras_require]
testing =
    pytest>=7.3.1
    pytest-cov>=4.0.0

[coverage:run]
source = storage
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=storage
    --cov-report=term-missing